k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microshop
  labels:
    app.kubernetes.io/part-of: microshop
